[package]
name = "findomain"
version = "9.0.0"
authors = ["Eduard Tolosa <edu4rdshl@protonmail.com>"]
edition = "2021"
description = "The fastest and cross-platform subdomain enumerator, do not waste your time."
repository = "https://github.com/Findomain/Findomain"
license = "GPL-3.0-or-later"
keywords = ["discover-subdomains", "ct-logs", "search-subdomains", "enumerate-subdomains", "subdomain-scanner"]
readme = "README.md"
rust-version = "1.58"
resolver = "1"

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_derive = "1.0.159"
reqwest = { version = "0.11.17", features = ["blocking", "json", "gzip"] }
trust-dns-resolver = "0.20.4"
clap = { version = "2.34.0", features = ["yaml"] }
lazy_static = "1.4.0"
rand = "0.8.5"
postgres = "0.19.5"
rayon = "1.7.0"
config = { version = "0.11.0", features = ["yaml", "json", "toml", "hjson", "ini"] }
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", rev = "61ce783806e5d75a03f731330edae6156bb0a2e0" }
addr = "0.15.6"
serde_json = "1.0.95"
rusolver = { git = "https://github.com/Edu4rdSHL/rusolver", rev = "cf75cafee7c9d0c257c0b5a361441efc4e247e9c" }
fhc = { git = "https://github.com/Edu4rdSHL/fhc", rev = "c6ea4c6ad810061312f4b380d0ab7d51775950b1" } 
tokio = "1.27.0"
crossbeam = "0.8.2"
futures = "0.3.28"
anyhow = "1.0.70"
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"

# https://github.com/bluejekyll/trust-dns/pull/1632
[patch.crates-io]
trust-dns-resolver = { git = "https://github.com/Findomain/trust-dns", package = "trust-dns-resolver", branch = "custombranch" }

[target.arm-unknown-linux-gnueabihf.dependencies]
openssl = { version = "0.10.49", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.49", features = ["vendored"] }

[target.armv7-unknown-linux-gnueabihf.dependencies]
openssl = { version = "0.10.49", features = ["vendored"] }

[profile.release]
lto = 'thin'
codegen-units = 1
panic = 'abort'
incremental = false
opt-level = "s"
