[package]
name = "findomain"
version = "10.0.1"
authors = ["Eduard Tolosa <edu4rdshl@protonmail.com>"]
edition = "2021"
description = "The fastest and cross-platform subdomain enumerator, do not waste your time."
repository = "https://github.com/Findomain/Findomain"
license = "GPL-3.0-or-later"
keywords = [
    "discover-subdomains",
    "ct-logs",
    "search-subdomains",
    "enumerate-subdomains",
    "subdomain-scanner",
]
readme = "README.md"
rust-version = "1.58"
resolver = "1"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.210"
reqwest = { version = "0.12.23", features = ["blocking", "json", "gzip"] }
hickory-resolver = "0.25.2"
clap = { version = "4.5.48", features = ["derive"] }
lazy_static = "1.5.0"
rand = "0.9.2"
postgres = "0.19.12"
rayon = "1.11.0"
config = { version = "0.15.18", features = ["yaml", "json", "toml", "ini"] }
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", rev = "61ce783806e5d75a03f731330edae6156bb0a2e0" }
addr = "0.15.6"
serde_json = "1.0.145"
rusolver = { git = "https://github.com/Edu4rdSHL/rusolver", tag = "0.10.2" }
fhc = { git = "https://github.com/Edu4rdSHL/fhc", tag = "0.9.1" }
tokio = "1.47.1"
crossbeam = "0.8.2"
futures = "0.3.31"
anyhow = "1.0.100"
postgres-native-tls = "0.5.2"
native-tls = "0.2.13"

[target.arm-unknown-linux-gnueabihf.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[target.armv7-unknown-linux-gnueabihf.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
